fix responsive margin issues and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ ul {
   color: #00C3F6;
   font-weight: 400;
   margin-right: 40px;
+  font-family: sans-serif;
 }
 
 li a {
@@ -177,9 +178,10 @@ img {
 
 
 @media only screen and (max-width: 1176px){
+
   #custom {
     margin-left: 100px;
-    margin-top: 20px;
+    margin-top: 50px;
   }
 
  .head {
